--- a/cliente/css/estilos.css
+++ b/cliente/css/estilos.css
@@ -1,17 +1,35 @@
-body{
-    background-color: #f04140;
-}
-
-.bg-mastermind{
-    background-color: #f04140;
-}
-
-.bg-mastermind-50{
-    background-color: #ef8d8d;
-}
-
 .titulo-mastermind{
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   font-style: normal;  
+}
+
+nav{
+    background-color: #F57460;
+    height: 10vh;
+}
+
+
+
+#contenido-principal{
+    background-color: #ef8d8d;
+    height: 100vh;
+    padding-top: 10vh;
+}
+
+#columna-lateral-izqda{
+    height: 90vh;
+}
+
+#contenido-central{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 10px;
+    row-gap: 10px;
+}
+.card{
+    background-color: #ef8d8d; 
+}
+.card-body{
+    background-color: #ffffff;
 }
